--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         table{
             width: 100%;
         }
-         table, th, td{
+         table, th, {
             border: 1px solid black;
             border-collapse: collapse;
         }
